Add alacritty scroll up and show key bindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -108,7 +108,7 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 unbind C-p
 
 # https://superuser.com/questions/310251/use-terminal-scrollbar-with-tmux?lq=1
-# set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
+set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
 
 bind-key -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
 
