--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -845,7 +845,10 @@ hints:
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-# key_bindings:
+key_bindings:
+  - { key: J, mods: Shift|Control, action: ScrollHalfPageDown }
+  - { key: K, mods: Shift|Control, action: ScrollHalfPageUp   }
+
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
