Add .tmux.conf.local and minor tweeks in .tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,8 +58,6 @@ set -g allow-rename off
 set -g default-terminal "xterm-256color"
 
 # Status bar lá embaixo
-# set -g status-style 'bg=colour22'
-# set -g status-style 'bg=#a02727'
 set -g status-style 'bg=#606060 fg=#d6d6d6'
 set -g window-status-current-style 'bg=terminal fg=terminal'
 set -g message-style 'bg=#fcba03 fg=#000000'
@@ -67,27 +65,6 @@ set -g message-style 'bg=#fcba03 fg=#000000'
 set -g status-left " [#S] "
 # [kirby] qui, 11/fev/21 - 16:34
 set -g status-right "[#h] #(date '+%a, %d/%b/%y - %H:%M') "
-
-# Experimentos...
-# set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #(date '+%a, %d/%b/%y') @#h"
-# git branch? https://koenwoortman.com/tmux-show-current-git-branch-in-status-bar/
-# set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)"
-
-# Painéis
-### Escurecer as janelas com exceção da atual, da um efeito de "janela em foco"
-### e "janela sem foco"
-# set -g pane-border-style 'fg=colour16 bg=#1c0615'
-# set -g pane-active-border-style 'fg=colour22'
-# set -g window-style 'bg=#1c0615 fg=#54444f'
-# set -g window-active-style 'bg=terminal fg=terminal'
-### Não tão escuro quanto a opção acima, e não muda as letras da janela sem foco
-### era esse => set -g window-active-style 'bg=terminal fg=terminal'
-# Roxo pro padrão ubuntu
-# set -g window-style 'bg=#301424'
-# set -g pane-border-style 'bg=#301424'
-# Cinza mais escuro pro ayu-dark
-### e esse => set -g window-style 'bg=#242A36'
-# set -g pane-border-style 'bg=#181c25'
 
 # Usar o mouse pra quê?
 set -g mouse on
@@ -104,8 +81,6 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 # Control + v seleciona em blocos
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Pra copiar ainda é Enter e pra colar, prefixo + ]
-
-unbind C-p
 
 # https://superuser.com/questions/310251/use-terminal-scrollbar-with-tmux?lq=1
 set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
@@ -127,3 +102,5 @@ bind-key -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
 # bind-key -T copy-mode-vi 'C-Down' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh down'"
 # bind-key -T copy-mode-vi 'C-Up' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh up'"
 # bind-key -T copy-mode-vi 'C-Right' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh right'"
+
+if-shell "[ -f $HOME/.local/.tmux.conf.local ]" 'source $HOME/.local/.tmux.conf.local'
