Zsh and Tmux tweaks
Add apache-maven to PATH

Add asdf golang.1.17.5 bin to PATH

Fix .zshenv.local sourcing

Add shift+tab as reverse tab completion in z shell

Add bind + Ctrl + h,j,k to tmux as C+h,j,k

Add go tab completion to z shell

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,10 @@ set-option -g default-shell /bin/zsh
 
 # prefix + C-l clears screen. Useful because I remapped C-l to move around panes
 bind C-l send-keys 'C-l'
+# Por que não fazer pro resto?
+bind C-h send-keys 'C-h'
+bind C-j send-keys 'C-j'
+bind C-k send-keys 'C-k'
 
 # Pro esc não ficar lerdo dentro do nvim dentro do tmux
 # https://github.com/neovim/neovim/issues/2035
