Change tmux settings according to neovim :checkhealth

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,7 +59,8 @@ set -g allow-rename off
 
 ### Seção de eu tentando deixar o tmux mais bonito ###
 # Cores de verdade
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 
 # Status bar lá embaixo
 set -g status-style 'bg=#606060 fg=#d6d6d6'
@@ -87,7 +88,15 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Pra copiar ainda é Enter e pra colar, prefixo + ]
 
 # https://superuser.com/questions/310251/use-terminal-scrollbar-with-tmux?lq=1
-set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
+# set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
+
+# checkhealth do nvim mandou por isso aqui:
+set-option focus-events on
+set -ga terminal-overrides ',xterm-256color:Tc'
+# Com esse outro "terminal-overrides", control + esquerda/direita passou a gerar
+# as sequências 5D e 5C, ao invés das antigas ;5D e ;5C, e por isso tive que
+# fazer binds novos no zshrc
+
 
 bind-key -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
 
