--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -261,13 +261,16 @@ schemes:
       background: '#ffffff'
 
   # I didn't like the background, so I picked doom-ones background.
+  # I also changed the black and bright black, since they were pretty much
+  # invisible with the new background.
   # The rest is just tokyo-night-storm
   tokyo-night-storm: &modified-tokyo-night-storm
     primary:
       background: '0x282c34'
       foreground: '0xc0caf5'
     normal:
-      black:   '0x1D202F'
+      # black:   '0x1D202F'
+      black:   '0x6d6d6d'
       red:     '0xf7768e'
       green:   '0x9ece6a'
       yellow:  '0xe0af68'
@@ -276,7 +279,8 @@ schemes:
       cyan:    '0x7dcfff'
       white:   '0xa9b1d6'
     bright:
-      black:   '0x414868'
+      # black:   '0x414868'
+      black:   '0xa7a7a7'
       red:     '0xf7768e'
       green:   '0x9ece6a'
       yellow:  '0xe0af68'
