Increase time when displaying panes's indexes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,9 @@ bind C-k send-keys 'C-k'
 # https://github.com/neovim/neovim/issues/2035
 set -sg escape-time 10
 
+# Prefixo + q durar mais tempo. Dá pra apertar esc pra cancelar logo
+set -g display-panes-time 4000
+
 # Dividir os painéis
 unbind '"'
 unbind %
