--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -270,7 +270,8 @@ schemes:
       foreground: '0xc0caf5'
     normal:
       # black:   '0x1D202F'
-      black:   '0x6d6d6d'
+      # black:   '0x6d6d6d'
+      black:   '0x414868'
       red:     '0xf7768e'
       green:   '0x9ece6a'
       yellow:  '0xe0af68'
@@ -280,7 +281,8 @@ schemes:
       white:   '0xa9b1d6'
     bright:
       # black:   '0x414868'
-      black:   '0xa7a7a7'
+      # black:   '0xa7a7a7'
+      black:   '0x6d6d6d'
       red:     '0xf7768e'
       green:   '0x9ece6a'
       yellow:  '0xe0af68'
