Simplify tmux status bars and remove tmux-chtsh bind

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -70,9 +70,15 @@ set -g status-style 'bg=#606060 fg=#d6d6d6'
 set -g window-status-current-style 'bg=terminal fg=terminal'
 set -g message-style 'bg=#fcba03 fg=#000000'
 
-set -g status-left " [#S] "
+# set -g status-left " [#S] "
 # [kirby] qui, 11/fev/21 - 16:34
-set -g status-right "[#h] #(date '+%a, %d/%b/%y - %H:%M') "
+# set -g status-right "[#h] #(date '+%a, %d/%b/%y - %H:%M') "
+
+# New, consice status bar. When prefix is pressed,
+# current session + user@host gets bold + an exclamation
+# mark in the right bar appears (also in bold).
+set -g status-left '#{?client_prefix,#[bold],} [#S] '
+set -g status-right '#{?client_prefix,#[bold]!, }{#{user}@#{host}} '
 
 # Usar o mouse pra quê?
 set -g mouse on
@@ -100,8 +106,8 @@ set -ga terminal-overrides ',xterm-256color:Tc'
 # as sequências 5D e 5C, ao invés das antigas ;5D e ;5C, e por isso tive que
 # fazer binds novos no zshrc
 
-
-bind-key -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
+# I have never, once, used this
+# bind-key -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
 
 # AwesomeWM Vim Tmux navigator section
 # # Set title suffix to "- TMUX"
