Tweak kitty conf

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -673,8 +673,8 @@ tab_bar_style separator
 #: create a mapping for the select_tab action which presents you with
 #: a list of tabs and allows for easy switching to a tab.
 
-# tab_bar_min_tabs 2
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
+# tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown
@@ -766,7 +766,7 @@ tab_bar_background #999
 
 #: The foreground and background colors
 
-background_opacity 0.96
+background_opacity 0.90
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1443,7 +1443,8 @@ map kitty_mod+p>l kitten hints --type line --program -
 #: Select words and insert into terminal.
 
 # map kitty_mod+p>h kitten hints --type hash --program -
-map kitty_mod+p>h kitten hints --type hash --program -
+# map kitty_mod+p>h kitten hints --type hash --program -
+map kitty_mod+h kitten hints --type hash --program -
 
 #: Select something that looks like a hash and insert it into the
 #: terminal. Useful with git, which uses sha1 hashes to identify
@@ -1599,6 +1600,26 @@ color6  #90e1c6
 color14 #95e6cb
 color7  #c7c7c7
 color15 #ffffff
+
+# modified tokyo night storm (que eu usava no alacritty)
+# background #282c34
+# foreground #c0caf5
+# color0   #475474
+# color1   #d95b72
+# color2   #7db046
+# color3   #bf8e47
+# color4   #5368db
+# color5   #a771d9
+# color6   #5b98de
+# color7   #a9b1d6
+# color8   #6d6d6d
+# color9   #f7768e
+# color10  #9ece6a
+# color11  #e0af68
+# color12  #7aa2f7
+# color13  #bb9af7
+# color14  #7dcfff
+# color15  #c0caf5
 
 # Blazer
 # background #0d1925
