--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
-set-option -g default-shell /bin/zsh
+# Tentar usar isso aqui?
+# https://www.youtube.com/watch?v=l_TTxc0AcCw
 
 # prefix + C-l clears screen. Useful because I remapped C-l to move around panes
 bind C-l send-keys 'C-l'
@@ -9,6 +10,7 @@ bind C-k send-keys 'C-k'
 
 # Pro esc não ficar lerdo dentro do nvim dentro do tmux
 # https://github.com/neovim/neovim/issues/2035
+# https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
 set -sg escape-time 10
 
 # Prefixo + q durar mais tempo. Dá pra apertar esc pra cancelar logo
@@ -30,15 +32,21 @@ set -g set-titles-string "#{window_name}" ##{pane_current_path} não atualiza en
 # Começar uma janela nova no mesmo diretório
 bind c new-window -c "#{pane_current_path}"
 
-# Atalho para carregar as configurações
+# Atalho para carregar as configurações (recarregar, reload, refresh)
 bind r source-file ~/.tmux.conf
 
 ############
-# smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+# Ignores tmux map when running vim, nvim or fzf. This means that inside these
+# programs, the following mappings will be ignored, and the default nvim/vim/fzf
+# C-j will be executed, for instance. Used as "smart pane switching" when on vim
+# (aware of vim splits) or to navigate up and down in fzf.
+# In the case of fzf, the navigation can be done with C-p and C-n, so I think
+# this map might actually be a bad thing, but since I never use fzf, I'll never
+# really know.
+bind -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(n\?vim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
+bind -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(n\?vim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
+bind -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(n\?vim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
+bind -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(n\?vim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
 ############
 
 # Comandos mais fáceis para mudar os tamanhos dos painéis
