Increase tmux left status maximum to 15 (default was 10, I believe)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -86,6 +86,7 @@ set -g message-style 'bg=#fcba03 fg=#000000'
 # current session + user@host gets bold + an exclamation
 # mark in the right bar appears (also in bold).
 set -g status-left '#{?client_prefix,#[bold],} [#S] '
+set -g status-left-length 15
 set -g status-right '#{?client_prefix,#[bold]!, }[#{user}@#{host}] '
 
 # Usar o mouse pra quê?
