--- a/git-configs-example/config
+++ b/git-configs-example/config
@@ -1,7 +1,7 @@
 [user]
   name = Lucas Perez
   email = lucas@email.com
-; [includeIf "gitdir:/home/lucas/algumacoisa"]
+; [includeIf "gitdir:/home/lucas/algumacoisa/**"]
 ;   path = /home/lucas/algumaoutracoisa/.gitconfig
 [core]
   editor = "vi -c 'hi ColorColumn ctermbg=125 ctermfg=white' -c 'set colorcolumn=51' -c 'set textwidth=0'"
