--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -100,7 +100,7 @@ window:
   # and `light`. Set this to `None` to use the default theme variant.
   #gtk_theme_variant: None
 
-#scrolling:
+scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
   history: 10000
@@ -109,7 +109,11 @@ window:
   # multiplier: 3
 
 # Font configuration
-#font:
+font:
+  # Point size
+  #size: 11.0
+  size: 9.5
+
   # Normal (roman) font face
   #normal:
     # Font family
@@ -155,9 +159,6 @@ window:
 
     # The `style` can be specified to pick a specific face.
     #style: Bold Italic
-
-  # Point size
-  #size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
