[tmux] Don't match on vim on C-h/j/k/l, only specifically on nvim

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,10 +43,14 @@ bind r source-file ~/.tmux.conf
 # In the case of fzf, the navigation can be done with C-p and C-n, so I think
 # this map might actually be a bad thing, but since I never use fzf, I'll never
 # really know.
-bind -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(n\?vim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
-bind -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(n\?vim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
-bind -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(n\?vim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
-bind -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(n\?vim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
+bind -n C-h run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-h) || tmux select-pane -L'
+bind -n C-j run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-j) || tmux select-pane -D'
+bind -n C-k run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-k) || tmux select-pane -U'
+bind -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\(nvim\|fzf\)$" && tmux send-keys C-l) || tmux select-pane -R'
+# I want to specifically match nvim but NOT vim. This is because I run barebones
+# vim without plugins nor keymaps, so I want to be able to navigate out of a
+# tmux pane with vim running. If I wanted to match on both vim and nvim, the
+# regex could be like this: ^n\?vim$
 ############
 
 # Comandos mais fáceis para mudar os tamanhos dos painéis
