[tmux] Move ~/.tmux.conf to ~/.config/tmux/tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,7 +33,7 @@ set -g set-titles-string "#{window_name}" ##{pane_current_path} não atualiza en
 bind c new-window -c "#{pane_current_path}"
 
 # Atalho para carregar as configurações (recarregar, reload, refresh)
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 ############
 # Ignores tmux map when running vim, nvim or fzf. This means that inside these
@@ -122,20 +122,14 @@ set -ga terminal-overrides ',xterm-256color:Tc'
 # I have never, once, used this
 # bind-key -r b run-shell "tmux neww bash -c \"~/scripts/tmux-chtsh/tmux-cht.sh\""
 
-# AwesomeWM Vim Tmux navigator section
-# # Set title suffix to "- TMUX"
-# set-option -g set-titles on
-# set-option -g set-titles-string '#S: #W - TMUX'
-# # Smart pane switching with awareness of vim splits and system windows
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-# 	| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-# bind -n C-Left if-shell "$is_vim" "send-keys C-h" "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh left'"
-# bind -n C-Down if-shell "$is_vim" "send-keys C-j" "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh down'"
-# bind -n C-Up if-shell "$is_vim" "send-keys C-k" "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh up'"
-# bind -n C-Right if-shell "$is_vim" "send-keys C-l" "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh right'"
-# bind-key -T copy-mode-vi 'C-Left' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh left'"
-# bind-key -T copy-mode-vi 'C-Down' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh down'"
-# bind-key -T copy-mode-vi 'C-Up' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh up'"
-# bind-key -T copy-mode-vi 'C-Right' "run-shell 'sh ~/.config/awesome/awesomewm-vim-tmux-navigator/tmux_focus.sh right'"
-
-if-shell "[ -f $HOME/.local/.tmux.conf.local ]" 'source $HOME/.local/.tmux.conf.local'
+# If both XDG_CONFIG_HOME and HOME/.config exists,
+# it only sources the XDG_CONFIG_HOME one.
+if-shell '[ -d $XDG_CONFIG_HOME ] || [ -d $HOME/.config ]' {
+  if-shell '[ -f $XDG_CONFIG_HOME/tmux/tmux.conf.local ]' {
+    source $XDG_CONFIG_HOME/tmux/tmux.conf.local
+  } {
+    if-shell '[ -f $HOME/.config/tmux/tmux.conf.local ]' {
+      source $HOME/.config/tmux/tmux.conf.local
+    }
+  }
+}
