[tmux] Add smart C-c that can both cancel selection and exit vi mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,6 +53,13 @@ bind -n C-l run '(tmux display-message -p #{pane_current_command} | grep -iq "^\
 # regex could be like this: ^n\?vim$
 ############
 
+# Cancel selection with C-c without quitting vim mode, but still
+# be able to quit vim mode with C-c when nothing is selected
+# https://stackoverflow.com/questions/47848463/tmux-variable-indicating-whether-text-is-selected
+bind -T copy-mode-vi C-c if-shell -F '#{selection_present}' \
+                                     'send-keys -X clear-selection' \
+                                     'send-keys -X cancel'
+
 # Comandos mais fáceis para mudar os tamanhos dos painéis
 unbind -n C-Left
 unbind -n C-Right
